decompress/tests/snapshots/archives_test__can_list_bare.ar.snap
---
source: decompress/tests/archives_test.rs
expression: "(archive, Decompress::default().list(target))"
---
(
    "bare.ar",
    Ok(
        Listing {
            id: "ar",
            entries: [
                "a.out",
            ],
        },
    ),
)
