decompress/tests/snapshots/archives_test__can_list_inner.tar.bz2.snap
---
source: decompress/tests/archives_test.rs
expression: "(archive, Decompress::default().list(target))"
---
(
    "inner.tar.bz2",
    Ok(
        Listing {
            id: "tarbz",
            entries: [
                "folder-1/",
                "folder-1/ex.sh",
                "folder-1/sub.txt",
                "root.txt",
            ],
        },
    ),
)
