decompress/tests/snapshots/archives_test__can_list_inner.tar.gz.snap
---
source: decompress/tests/archives_test.rs
expression: "(archive, Decompress::default().list(target))"
---
(
    "inner.tar.gz",
    Ok(
        Listing {
            id: "targz",
            entries: [
                "folder-1/",
                "folder-1/ex.sh",
                "folder-1/sub.txt",
            ],
        },
    ),
)
