decompress/tests/snapshots/archives_test__can_list_inner.tar.xz.snap
---
source: decompress/tests/archives_test.rs
expression: "(archive, Decompress::default().list(target))"
---
(
    "inner.tar.xz",
    Ok(
        Listing {
            id: "tarxz",
            entries: [
                "folder-1/",
                "folder-1/ex.sh",
                "folder-1/sub.txt",
            ],
        },
    ),
)
