decompress/tests/snapshots/archives_test__can_list_inner.tar.zst.snap
---
source: decompress/tests/archives_test.rs
expression: "(archive, Decompress::default().list(target))"
---
(
    "inner.tar.zst",
    Ok(
        Listing {
            id: "tarzst",
            entries: [
                "folder-1/",
                "folder-1/ex.sh",
                "folder-1/sub.txt",
            ],
        },
    ),
)
