decompress/tests/snapshots/archives_test__can_list_sub.txt.bz2.snap
---
source: decompress/tests/archives_test.rs
expression: "(archive, Decompress::default().list(target))"
---
(
    "sub.txt.bz2",
    Ok(
        Listing {
            id: "bz2",
            entries: [
                "sub.txt",
            ],
        },
    ),
)
