decompress/tests/snapshots/archives_test__can_list_sub.txt.gz.snap
---
source: decompress/tests/archives_test.rs
expression: "(archive, Decompress::default().list(target))"
---
(
    "sub.txt.gz",
    Ok(
        Listing {
            id: "gz",
            entries: [
                "sub.txt",
            ],
        },
    ),
)
