decompress/tests/snapshots/archives_test__can_list_sub.txt.xz.snap
---
source: decompress/tests/archives_test.rs
expression: "(archive, Decompress::default().list(target))"
---
(
    "sub.txt.xz",
    Ok(
        Listing {
            id: "xz",
            entries: [
                "sub.txt",
            ],
        },
    ),
)
