decompress/tests/snapshots/archives_test__can_list_sub.txt.zst.snap
---
source: decompress/tests/archives_test.rs
expression: "(archive, Decompress::default().list(target))"
---
(
    "sub.txt.zst",
    Ok(
        Listing {
            id: "zst",
            entries: [
                "sub.txt",
            ],
        },
    ),
)
